
 * When a TLS renegotiation is denied, configured error documents could prevent
   the proper HTTP/2 stream reset to happen. Fix by Michael Kaufmann (@mkauf).
 * Added a test case for #172

v1.14.1
--------------------------------------------------------------------------------
 * Tweaks to new H2Padding, now simply is of the form:
    ```H2Padding numbits```
   and applies a *random* number of padding bytes to each payload frame. The
   range is from [0, 2^N[. The default is 0, so no padding.
 
v1.14.0
--------------------------------------------------------------------------------
 * new configuration directive:
    ```H2Padding [ 'prefer' | 'enforce' ] numbits```
    to control padding of HTTP/2 payload frames. 'numbits' is a number from 0-8,
    where 0 disables padding and 1-8 is the power of 2 that frame lengths are
    rounded to. The default is 4 bits, e.g. frames are padded to be a multiple
    of 16 (2^4).
    While 'enforce' always applies this to all payload frames, the default 'prefer'
    option caps frame length at H2TLSWarmUpSize when in effect.
  
v1.13.1
--------------------------------------------------------------------------------
 * mod_http2: cleanup of the now dead h2_req_engine support, no functional change.

v1.13.0
--------------------------------------------------------------------------------
 * mod_proxy_http2: simplifying implementation and reducing memory use by only
   running a single request at the time on a h2 backend connection. The previous
   implementation was just not good enough regarding flow control on the overall
   server and too complex compared to the performance benefits achieved. The goal
   with this change is to establish a solid base from which to optimize things
   again.
 * Fixes slave connection input filter to use proper return code on speculative read
   encountering an EOF.
 * Starting test_600 for mod_proxy_http2 use on server itself

v1.12.5